# ModelRouterX

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  alembic.ini  pyproject.toml
dashboard/: Dockerfile  package-lock.json  package.json  tsconfig.json
dashboard/app/: globals.css  layout.tsx
dashboard/app/(dashboard)/: layout.tsx  page.tsx
dashboard/components/charts/: CacheHitRate.tsx  CostOverTime.tsx  LatencyHeatmap.tsx  ModelDistribution.tsx
dashboard/lib/: api.ts
gateway/: Dockerfile  __init__.py  config.py  dependencies.py  main.py  schemas.py
gateway/api/v1/: chat.py  (+5 more)
gateway/cache/: __init__.py  cache_manager.py  embedder.py  exact_cache.py  semantic_cache.py
gateway/db/: session.py
gateway/jobs/: cache_eviction.py  cost_rollup.py  health_checker.py
gateway/middleware/: circuit_breaker.py
gateway/models/: __init__.py  cost_rollup.py  provider_health.py  request_log.py  routing_rule.py  semantic_cache.py  virtual_key.py
gateway/observability/: langfuse.py
gateway/providers/: anthropic.py  base.py  google.py  groq.py  models.py  ollama.py  openai.py  registry.py
gateway/routing/: __init__.py  classifier.py  fallback.py  load_balancer.py  router.py
gateway/utils/: pricing.py  security.py  streaming.py  token_counter.py
infra/: docker-compose.prod.yml  docker-compose.yml
infra/nginx/: gateway.conf
infra/postgres/: init.sql
tests/integration/: test_chat_endpoint.py  test_fallback.py
tests/load/: locustfile.py
tests/unit/: test_cache.py  test_circuit_breaker.py  test_classifier.py  test_embedder.py  test_router.py
(+26 files in other folders)
